--- a/server-minecraft/server.properties
+++ b/server-minecraft/server.properties
@@ -1,12 +1,15 @@
 #Minecraft server properties
-#Mon Oct 16 06:16:55 UTC 2023
+#Mon Oct 16 06:17:06 UTC 2023
 generator-settings=
 op-permission-level=4
+allow-nether=true
 level-name=world
+enable-query=false
 allow-flight=false
 announce-player-achievements=true
 server-port=25565
 level-type=DEFAULT
+enable-rcon=false
 level-seed=
 force-gamemode=false
 server-ip=
@@ -16,7 +19,7 @@ white-list=false
 spawn-animals=true
 hardcore=false
 snooper-enabled=true
-online-mode=true
+online-mode=false
 resource-pack=
 pvp=true
 difficulty=1
