--- a/server-minecraft/server.properties
+++ b/server-minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Oct 16 06:22:14 UTC 2023
+#Mon Oct 16 06:23:37 UTC 2023
 generator-settings=
 op-permission-level=4
 allow-nether=true
@@ -17,17 +17,17 @@ max-build-height=256
 spawn-npcs=true
 white-list=false
 spawn-animals=true
-hardcore=false
 snooper-enabled=true
+hardcore=false
 online-mode=false
 resource-pack=
 pvp=true
 difficulty=1
 enable-command-block=false
-gamemode=0
 player-idle-timeout=0
+gamemode=0
 max-players=20
 spawn-monsters=true
-generate-structures=true
 view-distance=10
-motd=A Minecraft Server
+generate-structures=true
+motd=BERLIM O BRABO \:)
