--- a/server-minecraft/server.properties
+++ b/server-minecraft/server.properties
@@ -30,4 +30,4 @@ max-players=20
 spawn-monsters=true
 view-distance=10
 generate-structures=true
-motd=BERLIM O BRABO \:)
+motd=MICROSOFT BRABA DEMAIS
