--- a/server-minecraft/server.properties
+++ b/server-minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Oct 16 17:25:40 UTC 2023
+#Mon Oct 16 23:39:17 UTC 2023
 generator-settings=
 op-permission-level=4
 allow-nether=true
@@ -30,4 +30,5 @@ max-players=20
 spawn-monsters=true
 generate-structures=true
 view-distance=10
+spawn-protection=16
 motd=MICROSOFT BRABA DEMAIS
